// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportingYearFormDialog Should match last accepted snapshot: no inputs disabled as all dates are in future 1`] = `
<Fragment>
  <Bootstrap(Modal)
    centered={true}
    onHide={[MockFunction]}
    show={true}
    size="lg"
  >
    <ModalHeader
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle>
        Edit Reporting Year 
        2025
      </ModalTitle>
    </ModalHeader>
    <ModalBody>
      <Container
        fluid={false}
      >
        <Form
          ErrorList={[Function]}
          FieldTemplate={[Function]}
          ObjectFieldTemplate={[Function]}
          disabled={false}
          formData={
            Object {
              "applicationCloseTime": "2026-03-01T00:00:00-08:00",
              "applicationOpenTime": "2025-04-08T00:00:00-07:00",
              "reportingPeriodEnd": "2025-12-31T00:00:00-08:00",
              "reportingPeriodStart": "2025-01-01T00:00:00-08:00",
              "reportingYear": 2025,
              "swrsDeadline": "2026-06-01T00:00:00-07:00",
            }
          }
          liveOmit={true}
          liveValidate={false}
          noHtml5Validate={true}
          noValidate={false}
          omitExtraData={true}
          onSubmit={[Function]}
          safeRenderCompletion={false}
          schema={
            Object {
              "properties": Object {
                "applicationCloseTime": Object {
                  "title": "Application Close Time",
                  "type": "string",
                },
                "applicationOpenTime": Object {
                  "title": "Application Open Time",
                  "type": "string",
                },
                "swrsDeadline": Object {
                  "title": "Industrial GHG Reporting (SWRS) Deadline",
                  "type": "string",
                },
              },
              "required": Array [
                "swrsDeadline",
                "applicationOpenTime",
                "applicationCloseTime",
              ],
              "type": "object",
            }
          }
          showErrorList={false}
          uiSchema={
            Object {
              "applicationCloseTime": Object {
                "ui:disabled": false,
                "ui:widget": "DatePickerWidget",
              },
              "applicationOpenTime": Object {
                "ui:disabled": false,
                "ui:widget": "DatePickerWidget",
              },
              "swrsDeadline": Object {
                "ui:disabled": false,
                "ui:widget": "DatePickerWidget",
              },
            }
          }
          validate={[Function]}
          widgets={
            Object {
              "DatePickerWidget": [Function],
            }
          }
        >
          <Button
            active={false}
            disabled={false}
            type="submit"
            variant="primary"
          >
            Save Reporting Year
          </Button>
        </Form>
      </Container>
    </ModalBody>
  </Bootstrap(Modal)>
  <JSXStyle
    id="2037158273"
  >
    .
    r
    j
    s
    f
     
    .
    f
    o
    r
    m
    -
    r
    o
    w
    {
    m
    a
    r
    g
    i
    n
    :
    2
    0
    p
    x
     
    0
     
    2
    0
    p
    x
    ;
    }
    .
    e
    m
    i
    s
    s
    i
    o
    n
    -
    f
    o
    r
    m
     
    .
    r
    j
    s
    f
     
    .
    f
    o
    r
    m
    -
    r
    o
    w
    {
    m
    a
    r
    g
    i
    n
    :
    0
    ;
    }
    .
    n
    o
    -
    c
    o
    l
    -
    p
    a
    d
    d
    i
    n
    g
     
    .
    f
    o
    r
    m
    -
    r
    o
    w
    &gt;
    .
    c
    o
    l
    ,
    .
    n
    o
    -
    c
    o
    l
    -
    p
    a
    d
    d
    i
    n
    g
     
    .
    f
    o
    r
    m
    -
    r
    o
    w
    &gt;
    [
    c
    l
    a
    s
    s
    *
    =
    '
    c
    o
    l
    -
    '
    ]
    {
    p
    a
    d
    d
    i
    n
    g
    :
    0
    ;
    }
    .
    e
    r
    r
    o
    r
    s
    {
    m
    a
    r
    g
    i
    n
    :
    1
    e
    m
     
    0
     
    0
     
    0
    ;
    p
    a
    d
    d
    i
    n
    g
    :
    2
    0
    p
    x
    ;
    b
    a
    c
    k
    g
    r
    o
    u
    n
    d
    :
    #
    c
    e
    5
    c
    5
    c
    ;
    c
    o
    l
    o
    r
    :
    w
    h
    i
    t
    e
    ;
    f
    o
    n
    t
    -
    s
    i
    z
    e
    :
    2
    0
    p
    x
    ;
    }
    u
    l
    .
    e
    r
    r
    o
    r
    -
    d
    e
    t
    a
    i
    l
    {
    p
    a
    d
    d
    i
    n
    g
    :
    0
    ;
    l
    i
    s
    t
    -
    s
    t
    y
    l
    e
    :
    n
    o
    n
    e
    ;
    }
    u
    l
    .
    e
    r
    r
    o
    r
    -
    d
    e
    t
    a
    i
    l
     
    l
    i
    .
    t
    e
    x
    t
    -
    d
    a
    n
    g
    e
    r
    {
    b
    a
    c
    k
    g
    r
    o
    u
    n
    d
    :
    #
    c
    e
    5
    c
    5
    c
    ;
    c
    o
    l
    o
    r
    :
    w
    h
    i
    t
    e
     
    !
    i
    m
    p
    o
    r
    t
    a
    n
    t
    ;
    p
    a
    d
    d
    i
    n
    g
    :
    5
    p
    x
    ;
    }
    .
    e
    x
    i
    t
    -
    b
    u
    t
    t
    o
    n
    {
    c
    o
    l
    o
    r
    :
    #
    0
    0
    3
    3
    6
    6
    ;
    m
    a
    r
    g
    i
    n
    -
    l
    e
    f
    t
    :
    5
    p
    x
    ;
    b
    o
    r
    d
    e
    r
    -
    c
    o
    l
    o
    r
    :
    #
    0
    0
    3
    3
    6
    6
    ;
    }
    .
    e
    x
    i
    t
    -
    b
    u
    t
    t
    o
    n
    :
    h
    o
    v
    e
    r
    {
    c
    o
    l
    o
    r
    :
    w
    h
    i
    t
    e
     
    !
    i
    m
    p
    o
    r
    t
    a
    n
    t
    ;
    b
    a
    c
    k
    g
    r
    o
    u
    n
    d
    :
    #
    0
    0
    7
    b
    f
    f
     
    !
    i
    m
    p
    o
    r
    t
    a
    n
    t
    ;
    }
  </JSXStyle>
</Fragment>
`;

exports[`ReportingYearFormDialog Should match last accepted snapshot: some past dates are disabled 1`] = `
<Fragment>
  <Bootstrap(Modal)
    centered={true}
    onHide={[MockFunction]}
    show={true}
    size="lg"
  >
    <ModalHeader
      closeButton={true}
      closeLabel="Close"
    >
      <ModalTitle>
        Edit Reporting Year 
        2020
      </ModalTitle>
    </ModalHeader>
    <ModalBody>
      <Container
        fluid={false}
      >
        <Form
          ErrorList={[Function]}
          FieldTemplate={[Function]}
          ObjectFieldTemplate={[Function]}
          disabled={false}
          formData={
            Object {
              "applicationCloseTime": "2030-12-30T13:49:54.191757-08:00",
              "applicationOpenTime": "2030-04-01T14:49:54.191757-07:00",
              "reportingPeriodEnd": "2029-12-31T22:59:59-08:00",
              "reportingPeriodStart": "2018-12-31T23:00:00-08:00",
              "reportingYear": 2020,
              "swrsDeadline": "2031-06-01T13:49:54.191757-07:00",
            }
          }
          liveOmit={true}
          liveValidate={false}
          noHtml5Validate={true}
          noValidate={false}
          omitExtraData={true}
          onSubmit={[Function]}
          safeRenderCompletion={false}
          schema={
            Object {
              "properties": Object {
                "applicationCloseTime": Object {
                  "title": "Application Close Time",
                  "type": "string",
                },
                "applicationOpenTime": Object {
                  "title": "Application Open Time",
                  "type": "string",
                },
                "swrsDeadline": Object {
                  "title": "Industrial GHG Reporting (SWRS) Deadline",
                  "type": "string",
                },
              },
              "required": Array [
                "swrsDeadline",
                "applicationOpenTime",
                "applicationCloseTime",
              ],
              "type": "object",
            }
          }
          showErrorList={false}
          uiSchema={
            Object {
              "applicationCloseTime": Object {
                "ui:disabled": false,
                "ui:widget": "DatePickerWidget",
              },
              "applicationOpenTime": Object {
                "ui:disabled": false,
                "ui:widget": "DatePickerWidget",
              },
              "swrsDeadline": Object {
                "ui:disabled": false,
                "ui:widget": "DatePickerWidget",
              },
            }
          }
          validate={[Function]}
          widgets={
            Object {
              "DatePickerWidget": [Function],
            }
          }
        >
          <Button
            active={false}
            disabled={false}
            type="submit"
            variant="primary"
          >
            Save Reporting Year
          </Button>
        </Form>
      </Container>
    </ModalBody>
  </Bootstrap(Modal)>
  <JSXStyle
    id="2037158273"
  >
    .
    r
    j
    s
    f
     
    .
    f
    o
    r
    m
    -
    r
    o
    w
    {
    m
    a
    r
    g
    i
    n
    :
    2
    0
    p
    x
     
    0
     
    2
    0
    p
    x
    ;
    }
    .
    e
    m
    i
    s
    s
    i
    o
    n
    -
    f
    o
    r
    m
     
    .
    r
    j
    s
    f
     
    .
    f
    o
    r
    m
    -
    r
    o
    w
    {
    m
    a
    r
    g
    i
    n
    :
    0
    ;
    }
    .
    n
    o
    -
    c
    o
    l
    -
    p
    a
    d
    d
    i
    n
    g
     
    .
    f
    o
    r
    m
    -
    r
    o
    w
    &gt;
    .
    c
    o
    l
    ,
    .
    n
    o
    -
    c
    o
    l
    -
    p
    a
    d
    d
    i
    n
    g
     
    .
    f
    o
    r
    m
    -
    r
    o
    w
    &gt;
    [
    c
    l
    a
    s
    s
    *
    =
    '
    c
    o
    l
    -
    '
    ]
    {
    p
    a
    d
    d
    i
    n
    g
    :
    0
    ;
    }
    .
    e
    r
    r
    o
    r
    s
    {
    m
    a
    r
    g
    i
    n
    :
    1
    e
    m
     
    0
     
    0
     
    0
    ;
    p
    a
    d
    d
    i
    n
    g
    :
    2
    0
    p
    x
    ;
    b
    a
    c
    k
    g
    r
    o
    u
    n
    d
    :
    #
    c
    e
    5
    c
    5
    c
    ;
    c
    o
    l
    o
    r
    :
    w
    h
    i
    t
    e
    ;
    f
    o
    n
    t
    -
    s
    i
    z
    e
    :
    2
    0
    p
    x
    ;
    }
    u
    l
    .
    e
    r
    r
    o
    r
    -
    d
    e
    t
    a
    i
    l
    {
    p
    a
    d
    d
    i
    n
    g
    :
    0
    ;
    l
    i
    s
    t
    -
    s
    t
    y
    l
    e
    :
    n
    o
    n
    e
    ;
    }
    u
    l
    .
    e
    r
    r
    o
    r
    -
    d
    e
    t
    a
    i
    l
     
    l
    i
    .
    t
    e
    x
    t
    -
    d
    a
    n
    g
    e
    r
    {
    b
    a
    c
    k
    g
    r
    o
    u
    n
    d
    :
    #
    c
    e
    5
    c
    5
    c
    ;
    c
    o
    l
    o
    r
    :
    w
    h
    i
    t
    e
     
    !
    i
    m
    p
    o
    r
    t
    a
    n
    t
    ;
    p
    a
    d
    d
    i
    n
    g
    :
    5
    p
    x
    ;
    }
    .
    e
    x
    i
    t
    -
    b
    u
    t
    t
    o
    n
    {
    c
    o
    l
    o
    r
    :
    #
    0
    0
    3
    3
    6
    6
    ;
    m
    a
    r
    g
    i
    n
    -
    l
    e
    f
    t
    :
    5
    p
    x
    ;
    b
    o
    r
    d
    e
    r
    -
    c
    o
    l
    o
    r
    :
    #
    0
    0
    3
    3
    6
    6
    ;
    }
    .
    e
    x
    i
    t
    -
    b
    u
    t
    t
    o
    n
    :
    h
    o
    v
    e
    r
    {
    c
    o
    l
    o
    r
    :
    w
    h
    i
    t
    e
     
    !
    i
    m
    p
    o
    r
    t
    a
    n
    t
    ;
    b
    a
    c
    k
    g
    r
    o
    u
    n
    d
    :
    #
    0
    0
    7
    b
    f
    f
     
    !
    i
    m
    p
    o
    r
    t
    a
    n
    t
    ;
    }
  </JSXStyle>
</Fragment>
`;
